--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <body>
     <!-- Login Container -->
     <div class="login-container" id="loginContainer">
-        <h2>Auszahlungssystem Login</h2>
+        <h2>PunkteSystem Login</h2>
         <div id="loginError" class="error-message"></div>
         <input type="email" id="email" class="login-input" placeholder="Email" required>
         <input type="password" id="password" class="login-input" placeholder="Passwort" required>
@@ -187,7 +187,7 @@
         
         <div class="app-content">
             <div class="container">
-                <h1>Auszahlungssystem</h1>
+                <h1>PunkteSystem</h1>
                 <button onclick="toggleDarkMode()">Dark Mode</button>
                 <button onclick="toggleConfigPanel()">Konfiguration</button>
                 <input type="text" id="command" placeholder="Befehl eingeben..." onkeypress="handleKeyPress(event)">
